# checkers

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  bitboard.h  bitboard_access.cpp  bitboard_access.h  bitboard_movegen.cpp  bitboard_movegen.h  bitstring_list.cpp  bitstring_list.h  compact_move.cpp  compact_move.h  convert.cpp  convert.h  engine.cpp  engine.h  hash.cpp  hash.h  hash_table.cpp  hash_table.h  move.cpp  move.h  move_type.h  movegen.cpp  movegen.h  piece_codes.h  random.cpp  random.h
src/game/: CMakeLists.txt  board.cpp  board.h  coord.cpp  coord.h  direction.cpp  direction.h  game.cpp  game.h  matchtype.h  move.cpp  move.h  movegen.cpp  movegen.h  piece.cpp  piece.h  player.h  position.cpp  position.h  turn.h
src/gui/: CMakeLists.txt  engine_thread.cpp  engine_thread.h  engine_thread_controller.cpp  engine_thread_controller.h  engine_thread_worker.cpp  engine_thread_worker.h  game_manager.cpp  game_manager.h  gui.cpp  gui.h  gui_game_data.h  input_handler.cpp  input_handler.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  render_area.cpp  render_area.h  renderarea.cpp  renderarea.h  renderer.cpp  renderer.h
src/tui/: CMakeLists.txt  tui.cpp  tui.h
tests/: CMakeLists.txt  main.cpp
tests/engine/: CMakeLists.txt
tests/game/: CMakeLists.txt  board_test.cpp  coord_test.cpp  direction_test.cpp  game_test.cpp  move_test.cpp  movegen_test.cpp  piece_test.cpp  position_test.cpp
tests/helper/: CMakeLists.txt  util.cpp  util.h
tests/tui/: CMakeLists.txt
